--- a/A/PatologiasA/abdomen_hinchado.html
+++ b/A/PatologiasA/abdomen_hinchado.html
@@ -21,15 +21,26 @@
     </div>
     <article>
       <h2>Abdomen Hinchado</h2>
+      <nav aria-label="Tabla de contenidos">
+        <h3>Contenido del artículo</h3>
+          <ul> <!--#id de cabecera-->
+            <li><a href="#descripcion">Descripción</a></li>
+            <li><a href="#causas">Causas</a></li>
+            <li><a href="#sintomas">Síntomas</a></li>
+            <li><a href="#pruebas">Pruebas y exámenes</a></li>
+            <li><a href="#tratamiento">Tratamiento</a></li>
+            <li><a href="#pronostico">Pronóstico</a></li>
+          </ul>
+      </nav>
       <figure>
             <img src="../../Imagenes/abdomen.jpg" alt="Persona con el abdomnen hinchado">
             <figcaption>Abdomen ligeramente inflamado</figcaption>
       </figure>
-      <section>
+      <section id="descripcion">
         <h3>Descripción</h3>
         <p>El abdomen hinchado, también conocido como distensión abdominal, es la sensación de aumento de volumen o presión en el abdomen. Puede ser ocasional o crónico y, aunque a menudo no es grave, en algunos casos puede indicar problemas de salud subyacentes.</p>
       </section>
-      <section>
+      <section id="causas">
         <h3>Causas</h3>
         <p>Las causas del abdomen hinchado son variadas y pueden incluir:</p>
         <ul>
@@ -56,7 +67,7 @@
             <area alt="Colon irritado" title="Colon irritado" href="https://www.cun.es/enfermedades-tratamientos/enfermedades/colon-irritable" coords="244,314,221,307,211,298,203,284,195,271,185,252,182,234,182,216,184,192,185,166,186,145,201,139,218,135,233,131,243,131,256,132,268,136,281,139,291,143,310,148,327,149,342,154,356,157,364,157,377,158,390,159,403,156,414,153,427,148,438,141,448,131,462,120,472,110,484,113,487,124,488,134,488,145,489,161,490,179,488,201,487,228,483,255,469,278,458,288,448,300,432,316,422,328,413,337,399,348,387,338,392,331,404,320,413,311,424,305,436,300,434,291,440,279,466,239,457,162,421,181,384,185,310,185,254,170,224,158,217,223" shape="poly">
         </map>
       </section>
-      <section>
+      <section id="sintomas">
         <h3>Síntomas</h3>
         <p>Los síntomas que pueden acompañar al abdomen hinchado incluyen:</p>
         <ul>
@@ -67,7 +78,7 @@
           <li>Alteraciones en el tránsito intestinal, como diarrea o estreñimiento.</li>
         </ul>
       </section>
-      <section>
+      <section id="pruebas">
         <h3>Pruebas y exámenes</h3>
         <p>Para determinar la causa del abdomen hinchado, se pueden realizar las siguientes pruebas:</p>
         <ul>
@@ -79,7 +90,7 @@
           <li>Endoscopia digestiva para examinar el interior del estómago e intestinos.</li>
         </ul>
       </section>
-      <section>
+      <section id="tratamiento">
         <h3>Tratamiento</h3>
         <p>El tratamiento depende de la causa subyacente y puede incluir:</p>
         <ul>
@@ -89,16 +100,13 @@
           <li>Hidratación adecuada y ejercicio regular para mejorar el tránsito intestinal.</li>
         </ul>
       </section>
-      <section>
+      <section id="pronostico">
         <h3>Pronóstico</h3>
         <p>La mayoría de los casos de abdomen hinchado leve mejora con cambios en la dieta y hábitos de vida. Sin embargo, si los síntomas persisten, se acompañan de dolor intenso, pérdida de peso o vómitos, es importante buscar atención médica para descartar problemas graves. La educación sobre hábitos alimenticios y digestivos saludables es clave para prevenir recurrencias.</p>
       </section>
       <section>
       </section>
     </article>
-    <nav aria-label="Navegación de regreso a índice A">
-    <a href="../indexa.html">Volver a Índice A</a>
-    </nav>
     <footer>
       <p>&copy; 2025 MediUA. Todos los derechos reservados.</p>
       <address>
@@ -106,7 +114,12 @@
         Correos: pss78@alu.ua.es y esp96@alu.ua.es<br>
         Dirección: Carr. de San Vicente del Raspeig
       </address>
-      <a href="../../index.html">Volver a la página principal</a>
+      <nav aria-label="Navegación de regreso a página principal y mapa del sitio web">
+            <ul>
+                <li><a href="../../index.html">Volver a la página principal</a></li>
+                <li><a href="../../Navegacion/mapa_web.html">Mapa del sitio web</a></li>
+            </ul>
+      </nav>
     </footer>
   </body>
 </html>
