--- a/A/PatologiasA/anafilaxia.html
+++ b/A/PatologiasA/anafilaxia.html
@@ -21,15 +21,26 @@
     </div>
     <article>
       <h2>Anafilaxia</h2>
+      <nav aria-label="Tabla de contenidos">
+        <h3>Contenido del artículo</h3>
+          <ul> <!--#id de cabecera-->
+            <li><a href="#descripcion">Descripción</a></li>
+            <li><a href="#causas">Causas</a></li>
+            <li><a href="#sintomas">Síntomas</a></li>
+            <li><a href="#pruebas">Pruebas y exámenes</a></li>
+            <li><a href="#tratamiento">Tratamiento</a></li>
+            <li><a href="#pronostico">Pronóstico</a></li>
+          </ul>
+      </nav>
       <figure>
             <img src="../../Imagenes/anafilaxia.jpg" alt="Persona con anafilaxia">
             <figcaption>Irritación cutánea en el cuello debido a la anafilaxia</figcaption>
       </figure>
-      <section>
+      <section id="descripcion">
         <h3>Descripción</h3>
         <p>La anafilaxia es una reacción alérgica grave y potencialmente mortal que se produce de manera rápida después de la exposición a un alérgeno. Puede afectar a múltiples sistemas del cuerpo, incluyendo piel, vías respiratorias, sistema cardiovascular y digestivo.</p>
       </section>
-      <section>
+      <section id="causas">
         <h3>Causas</h3>
         <p>La anafilaxia puede ser desencadenada por diferentes factores, entre los más comunes se encuentran:</p>
         <ul>
@@ -39,7 +50,7 @@
           <li>Ejercicio físico intenso combinado con ciertos alimentos o medicamentos.</li>
         </ul>
       </section>
-      <section>
+      <section id="sintomas">
         <h3>Síntomas</h3>
         <p>Los síntomas suelen aparecer de forma rápida y pueden incluir:</p>
         <ul>
@@ -50,7 +61,7 @@
           <li>Náuseas, vómitos o diarrea.</li>
         </ul>
       </section>
-      <section>
+      <section id="pruebas">
         <h3>Pruebas y exámenes</h3>
         <p>La evaluación clínica incluye historia clínica detallada y exploración física. Según la sospecha, se pueden solicitar:</p>
         <ul>
@@ -61,7 +72,7 @@
           <li>Análisis de sangre para determinar niveles de triptasa y otros marcadores de reacción alérgica.</li>
         </ul>
       </section>
-      <section>
+      <section id="tratamiento">
         <h3>Tratamiento</h3>
         <p>La anafilaxia requiere atención médica inmediata. Las medidas incluyen:</p>
         <ul>
@@ -73,14 +84,11 @@
         <p>Se recomienda que las personas con riesgo conocido de anafilaxia lleven consigo un autoinyector de adrenalina.</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/ShrJ94jnp5s?si=7OYXe04zyG5GOhPp" title="YouTube video player" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
       </section>
-      <section>
+      <section id="pronostico">
         <h3>Pronóstico</h3>
         <p>Con intervención rápida y adecuada, la mayoría de los episodios de anafilaxia se resuelven sin complicaciones graves. Sin embargo, la recurrencia es posible si la persona se expone nuevamente al alérgeno. La educación sobre prevención y el reconocimiento temprano de síntomas son fundamentales para reducir riesgos.</p>
       </section>
     </article>
-    <nav aria-label="Navegación de regreso a índice A">
-    <a href="../indexa.html">Volver a Índice A</a>
-    </nav>
     <footer>
       <p>&copy; 2025 MediUA. Todos los derechos reservados.</p>
       <address>
@@ -88,7 +96,12 @@
         Correos: pss78@alu.ua.es y esp96@alu.ua.es<br>
         Dirección: Carr. de San Vicente del Raspeig
       </address>
-      <a href="../../index.html">Volver a la página principal</a>
+      <nav aria-label="Navegación de regreso a página principal y mapa del sitio web">
+            <ul>
+                <li><a href="../../index.html">Volver a la página principal</a></li>
+                <li><a href="../../Navegacion/mapa_web.html">Mapa del sitio web</a></li>
+            </ul>
+      </nav>
     </footer>
   </body>
 </html>
