--- a/B/PatologiasB/bruxismo.html
+++ b/B/PatologiasB/bruxismo.html
@@ -26,16 +26,28 @@
     </div>
     <article>
     <h2>Bruxismo</h2>
+    <nav aria-label="Tabla de contenidos">
+        <h3>Contenido del artículo</h3>
+        <ul> <!--#id de cabecera-->
+            <li><a href="#descripcion">Descripción</a></li>
+            <li><a href="#causas">Causas</a></li>
+            <li><a href="#sintoma">Síntomas</a></li>
+            <li><a href="#pruebas">Pruebas y exámenes</a></li>
+            <li><a href="#tratamiento">Tratamiento</a></li>
+            <li><a href="#pronostico">Pronóstico</a></li>
+            <li><a href="#datos">Datos y estadísticas</a></li>
+        </ul>
+    </nav>
     <figure>
         <img src="../../Imagenes/bruxismo.jpg" alt="Persona con bruxismo">
-        <figcaption>Persona apretando los dientes debido al bruxismo</figcaption>
+        <figcaption>Persona apretando los dientes adolorida debido al bruxismo</figcaption>
     </figure>
-    <section>
+    <section id="descripcion">
         <h3>Descripción</h3>
         <p>El bruxismo es el hábito involuntario de apretar o rechinar los dientes, generalmente durante el sueño, aunque también puede ocurrir durante el día. Esta condición puede causar desgaste dental, dolor facial y problemas en la mandíbula si no se trata adecuadamente. Según <cite>Cifuentes-Harris</cite>, <q lang="en">Bruxism is defined as a repetitive muscular activity of the jaw, characterized by clenching, or grinding of the teeth due to dragging or thrusting of the jaw</q>.
         </p>
     </section>
-    <section>
+    <section id="causas">
         <h3>Causas</h3>
         <p>El bruxismo puede tener múltiples factores desencadenantes, que incluyen:</p>
         <ul>
@@ -45,8 +57,8 @@
             <li>Consumo de alcohol, cafeína o tabaco.</li>
             <li>Algunos medicamentos, especialmente antidepresivos.</li>
         </ul>
-    </section>
-    <section>
+    </section >
+    <section id="sintoma">
         <h3>Síntomas</h3>
         <p>Los síntomas más comunes del bruxismo incluyen:</p>
         <ul>
@@ -57,7 +69,7 @@
             <li>Desgaste dental o fracturas en los dientes.</li>
         </ul>
     </section>
-    <section>
+    <section id="pruebas">
         <h3>Pruebas y Exámenes</h3>
         <p>El diagnóstico del bruxismo se basa en la historia clínica, el examen físico y algunas pruebas complementarias:</p>
         <ul>
@@ -66,7 +78,7 @@
             <li>Polisomnografía en casos graves para detectar bruxismo nocturno y trastornos del sueño asociados.</li>
         </ul>
     </section>
-    <section>
+    <section id="tratamiento">
         <h3>Tratamiento</h3>
         <p>El tratamiento del bruxismo busca reducir el daño dental, aliviar el dolor y manejar los factores desencadenantes:</p>
         <ul>
@@ -77,11 +89,11 @@
             <li>Medicamentos en casos específicos, bajo supervisión médica.</li>
         </ul>
     </section>
-    <section>
+    <section id="pronostico">
         <h3>Pronóstico</h3>
         <p>Con un tratamiento adecuado, la mayoría de los pacientes logra reducir significativamente los síntomas y prevenir daños dentales. Sin embargo, el bruxismo puede ser recurrente, especialmente si los factores desencadenantes, como el estrés, no se controlan. La educación sobre hábitos saludables y revisiones dentales periódicas son clave para un manejo efectivo.</p>
     </section>
-    <section>
+    <section id="datos">
         <h3>Datos y estadísticas</h3>
         <p>El bruxismo afecta aproximadamente al 8-31% de la población mundial, siendo más común en adultos jóvenes. Se estima que alrededor del 20% de los adultos experimentan bruxismo en algún momento de su vida. El estrés es uno de los factores más comunes asociados con esta condición.</p>
         <table>
@@ -120,9 +132,6 @@
         </table>
     </section>
     </article>
-    <nav aria-label="Navegación de regreso a índice B">
-     <p><a href="../indexb.html">Volver a Índice B</a></p>
-    </nav>
     <footer>
         <p>&copy; 2025 MediUA. Todos los derechos reservados.</p>
         <address>
@@ -130,7 +139,12 @@
             Correos: pss78@alu.ua.es y esp96@alu.ua.es<br>
             Dirección: Carr. de San Vicente del Raspeig
         </address>
-        <a href="../../index.html">Volver a la página principal</a>
+        <nav aria-label="Navegación de regreso a página principal y mapa del sitio web">
+            <ul>
+                <li><a href="../../index.html">Volver a la página principal</a></li>
+                <li><a href="../../Navegacion/mapa_web.html">Mapa del sitio web</a></li>
+            </ul>
+        </nav>
     </footer>
 </body>
 </html>
