--- a/B/PatologiasB/bulimia.html
+++ b/B/PatologiasB/bulimia.html
@@ -21,6 +21,17 @@
     </div>
     <article>
     <h2>Bulimia</h2>
+    <nav aria-label="Tabla de contenidos">
+        <ul> <!--#id de cabecera-->
+            <li><a href="#descripcion">Descripción</a></li>
+            <li><a href="#causas">Causas</a></li>
+            <li><a href="#sintomas">Síntomas</a></li>
+            <li><a href="#pruebas">Pruebas y exámenes</a></li>
+            <li><a href="#tratamiento">Tratamiento</a></li>
+            <li><a href="#pronostico">Pronóstico</a></li>
+            <li><a href="#datos">Datos y estadísticas</a></li>
+        </ul>
+    </nav>
     <figure>
         <img src="../../Imagenes/bulimia.jpg" alt="Persona con bulimia">
         <figcaption>Caricatura de una persona con náuseas debido a la bulimia</figcaption>
@@ -30,7 +41,7 @@
         <p>La bulimia es un trastorno de la conducta alimentaria caracterizado por episodios recurrentes de ingesta excesiva de alimentos seguidos de conductas compensatorias inapropiadas, como vómitos autoinducidos, uso excesivo de laxantes, ayuno o ejercicio excesivo. Este trastorno afecta tanto la salud física como emocional y requiere atención profesional.</p>
     </section>
 
-    <section>
+    <section id="causas">
         <h3>Causas</h3>
         <p>La bulimia es causada por una combinación de factores biológicos, psicológicos y sociales, entre los que se incluyen:</p>
         <ul>
@@ -46,7 +57,7 @@
         </blockquote>
     </section>
 
-    <section>
+    <section id="sintomas">
         <h3>Síntomas</h3>
         <p>Los síntomas de la bulimia pueden ser físicos y conductuales:</p>
         <ul>
@@ -58,7 +69,7 @@
         </ul>
     </section>
 
-    <section>
+    <section id="pruebas">
         <h3>Pruebas y Exámenes</h3>
         <p>El diagnóstico se basa en la historia clínica, entrevistas y evaluación psicológica, además de exámenes médicos para evaluar el impacto físico:</p>
         <ul>
@@ -69,7 +80,7 @@
         </ul>
     </section>
 
-    <section>
+    <section id="tratamiento">
         <h3>Tratamiento</h3>
         <p>El tratamiento de la bulimia suele ser multidisciplinario, combinando intervención psicológica, nutricional y médica:</p>
         <ul>
@@ -81,11 +92,11 @@
         </ul>
     </section>
 
-    <section>
+    <section id="pronostico">
         <h3>Pronóstico</h3>
         <p>Con tratamiento adecuado y seguimiento continuo, muchas personas con bulimia pueden recuperar hábitos alimentarios saludables y mejorar su bienestar emocional. Sin embargo, la recuperación puede ser gradual y requiere compromiso, apoyo profesional y familiar. La prevención de recaídas es fundamental mediante educación, terapia y control médico periódico.</p>
     </section>
-    <section>
+    <section id="datos">
         <h3>Datos y estadísticas</h3>
         <p>Entre los años 2011 y 2023, se registró un aumento considerable del número de personas que padecen bulimia, el siguiente gráfico muestra el aumento del número de casos de la patología: </p>
         <figure>
@@ -94,9 +105,6 @@
         </figure>
     </section>
     </article>
-    <nav aria-label="Navegación de regreso a índice B">
-    <a href="../indexb.html">Volver a Ínidce B</a>
-    </nav>
     <footer>
         <p>&copy; 2025 MediUA. Todos los derechos reservados.</p>
         <address>
@@ -104,7 +112,12 @@
             Correos: pss78@alu.ua.es y esp96@alu.ua.es<br>
             Dirección: Carr. de San Vicente del Raspeig
         </address>
-        <a href="../../index.html">Volver a la página principal</a>
+        <nav aria-label="Navegación de regreso a página principal y mapa del sitio web">
+            <ul>
+                <li><a href="../../index.html">Volver a la página principal</a></li>
+                <li><a href="../../Navegacion/mapa_web.html">Mapa del sitio web</a></li>
+            </ul>
+        </nav>
     </footer>
 </body>
 </html>
