--- a/Buscador/buscador.html
+++ b/Buscador/buscador.html
@@ -112,7 +112,12 @@
             Correo: pss78@alu.ua.es y esp96@alu.ua.es<br>
             Dirección: Carr. de San Vicente del Raspeig
         </address>
-        <a href="../index.html">Volver a la página principal</a>
+        <nav aria-label="Navegación de regreso a página principal y mapa del sitio web">
+            <ul>
+                <li><a href="../index.html">Volver a la página principal</a></li>
+                <li><a href="../Navegacion/mapa_web.html">Mapa del sitio web</a></li>
+            </ul>
+        </nav>
     </footer>
 </body>
 </html>
