--- a/Contacto/contacto.html
+++ b/Contacto/contacto.html
@@ -31,7 +31,7 @@
             <textarea id="mensaje" name="mensaje" required placeholder="Escriba el comentario o el mensaje aquí"></textarea>
             </p>
             <p>
-            <label for="persona">Yo soy:</label>
+            <label for="persona">Yo soy (profesión):</label>
             <select name="persona" id="persona">
                 <option value="paciente">Paciente</option>
                 <option value="cientifico">Científico</option>
@@ -42,7 +42,7 @@
             </select>
             </p>
             <p>
-            <label for="fecha">Fecha:</label>
+            <label for="fecha">Fecha (cuándo se ha rellenado el formulario):</label>
             <input type="date" id="fecha" name="fecha">
             </p>
             <fieldset>
@@ -80,7 +80,12 @@
             Correo: pss78@alu.ua.es y esp96@alu.ua.es<br>
             Dirección: Carr. de San Vicente del Raspeig
         </address>
-        <a href="../index.html">Volver a la página principal</a>
+        <nav aria-label="Navegación de regreso a página principal y mapa del sitio web">
+            <ul>
+                <li><a href="../index.html">Volver a la página principal</a></li>
+                <li><a href="../Navegacion/mapa_web.html">Mapa del sitio web</a></li>
+            </ul>
+        </nav>
     </footer>
 </body>
 </html>
