--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
         <h3>Temas destacados</h3>
         <h4>Cáncer de piel</h4>
         <figure>
-            <img src="Imagenes/melanoma.jpg" alt="Imagen de un melanoma">
+            <img src="Imagenes/melanoma.jpg" alt="Melanoma">
             <figcaption>Cáncer de piel con bordes irregulares</figcaption>
         </figure>
         <p>El cáncer de piel es un tipo de cáncer que comienza como una <mark>proliferación</mark> de células en la piel. Las células pueden invadir y destruir los tejidos sanos del cuerpo. A veces, las células pueden desprenderse y diseminarse a otras partes del cuerpo. <a href="https://www.mayoclinic.org/es/diseases-conditions/skin-cancer/symptoms-causes/syc-20377605">Seguir leyendo sobre el cáncer de piel</a></p>
         <h4>Neumotórax</h4>
         <figure>
-            <img src="Imagenes/neumotorax.jpg" alt="Imagen de un neumotórax">
+            <img src="Imagenes/neumotorax.jpg" alt="Neumotórax">
             <figcaption>Pulmón colapsado parcialmente</figcaption>
         </figure>
         <p>Un neumotórax es un <mark>colapso pulmonar</mark>. Un neumotórax se produce cuando el aire se filtra dentro del espacio que se encuentra entre los pulmones y la pared torácica. El aire hace presión en la parte externa del pulmón y causa el colapso. Un neumotórax puede ser un colapso pulmonar completo o un colapso de solo una parte del pulmón. <a href="https://www.mayoclinic.org/es/diseases-conditions/pneumothorax/symptoms-causes/syc-20350367">Seguir leyendo sobre el neumotórax</a></p>
@@ -74,8 +74,10 @@
         <p>En esta página encontrarás información sobre los rangos de las constantes vitales. <a href="Complementario/constantes.html">Ir a la tabla de constantes vitales</a></p>
     </section>
     <nav aria-label="Enlaces de creación de perfil de usuario y contacto">
-        <h3><a href="Usuario/perfil.html">Página de creación de perfil de usuario</a></h3>
-        <h3><a href="Contacto/contacto.html">Página de contacto</a></h3>
+        <ul>
+            <li><h3><a href="Usuario/perfil.html">Página de creación de perfil de usuario</a></h3></li>
+            <li><h3><a href="Contacto/contacto.html">Página de contacto</a></h3></li>
+        </ul>
     </nav>
     <aside>
         <h3>Creadores de MediUA</h3>
@@ -101,7 +103,12 @@
             Correo: pss78@alu.ua.es y esp96@alu.ua.es<br>
             Dirección: Carr. de San Vicente del Raspeig
         </address>
-        <a href="index.html">Volver a la página principal</a> <!--Para no tener que subir-->
+        <nav aria-label="Navegación de regreso a página principal y mapa del sitio web">
+            <ul>
+                <li><a href="index.html">Volver a la página principal</a></li> <!--Para no tener que subir-->
+                <li><a href="Navegacion/mapa_web.html">Mapa del sitio web</a></li>
+            </ul>
+        </nav>
     </footer>
 </body>
 </html>
