--- a/A/indexa.html
+++ b/A/indexa.html
@@ -25,14 +25,19 @@
         <li><a href="PatologiasA/anafilaxia.html">Anafilaxia</a></li>
     </ul>
     </main>
-   <footer>
+    <footer>
         <p>&copy; 2025 MediUA. Todos los derechos reservados.</p>
         <address>
             Escrito por: Pablo Sánchez Sos y Eva Soto Peral<br>
             Correos: pss78@alu.ua.es y esp96@alu.ua.es<br>
             Dirección: Carr. de San Vicente del Raspeig
         </address>
-        <a href="../index.html">Volver a la página principal</a>
+        <nav aria-label="Navegación de regreso a página principal y mapa del sitio web">
+            <ul>
+                <li><a href="../index.html">Volver a la página principal</a></li>
+                <li><a href="../Navegacion/mapa_web.html">Mapa del sitio web</a></li>
+            </ul>
+        </nav>
     </footer>
 </body>
 </html>
