--- a/Navegacion/mapa_web.html
+++ b/Navegacion/mapa_web.html
@@ -45,6 +45,9 @@
                         <li>
                             <a href="../Contacto/contacto.html">Página de contacto</a>
                         </li>
+                        <li>
+                            <a href="../Declaracion/declaracion.html">Declaración de accesibilidad</a>
+                        </li>
                     </ul>
                 </li>
             </ul>
@@ -61,6 +64,7 @@
             <ul>
                 <li><a href="../index.html">Volver a la página principal</a></li>
                 <li><a href="mapa_web.html">Mapa del sitio web</a></li>
+                <li><a href="../Declaracion/declaracion.html">Declaración de accesibilidad</a></li>
             </ul>
         </nav>
     </footer>
