--- a/B/PatologiasB/bruxismo.html
+++ b/B/PatologiasB/bruxismo.html
@@ -143,6 +143,7 @@
             <ul>
                 <li><a href="../../index.html">Volver a la página principal</a></li>
                 <li><a href="../../Navegacion/mapa_web.html">Mapa del sitio web</a></li>
+                <li><a href="../../Declaracion/declaracion.html">Declaración de accesibilidad</a></li>
             </ul>
         </nav>
     </footer>
