--- a/index.html
+++ b/index.html
@@ -107,6 +107,7 @@
             <ul>
                 <li><a href="index.html">Volver a la página principal</a></li> <!--Para no tener que subir-->
                 <li><a href="Navegacion/mapa_web.html">Mapa del sitio web</a></li>
+                <li><a href="Declaracion/declaracion.html">Declaración de accesibilidad</a></li>
             </ul>
         </nav>
     </footer>
