--- a/B/PatologiasB/bruxismo.html
+++ b/B/PatologiasB/bruxismo.html
@@ -2,13 +2,9 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Bruxismo - MediUA</title>
-    <style>
-        table, tr, th, td {
-        border: 1px solid black;
-        }
-    </style>
-    <link rel="stylesheet" href="../../CSS/migas.css">
+    <link rel="stylesheet" href="../../CSS/principal.css">
 </head>
 <body>
     <header>
