--- a/Complementario/constantes.html
+++ b/Complementario/constantes.html
@@ -2,13 +2,9 @@
 <html lang="es">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Constantes vitales - MediUA</title>
-    <style>
-        table, tr, th, td {
-        border: 1px solid black;
-        }
-    </style>
-    <link rel="stylesheet" href="../CSS/migas.css">
+    <link rel="stylesheet" href="../CSS/principal.css">
 </head>
 
 <body>
@@ -28,7 +24,7 @@
         <h2>Constantes vitales</h2>
         <p>Las constantes vitales son indicadores fisiológicos que reflejan el estado de salud de una persona. Estas incluyen la presión arterial, la frecuencia cardiaca, el índice glucémico, el nivel de oxígeno en sangre y la temperatura corporal. Los rangos normales pueden variar según la edad, el sexo y otros factores individuales. Es importante monitorear estas constantes regularmente para detectar posibles problemas de salud a tiempo.</p>
         <section>
-           <table>
+            <table>
                 <caption>Constantes vitales y sus rangos de referencia</caption>
                 <thead>
                     <tr>
