--- a/Contacto/resp_contacto.html
+++ b/Contacto/resp_contacto.html
@@ -2,8 +2,9 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Página de confirmación - MediUA</title>
-    <link rel="stylesheet" href="../CSS/migas.css">
+    <link rel="stylesheet" href="../CSS/principal.css">
 </head>
 <body>
     <header>
