--- a/index.html
+++ b/index.html
@@ -2,8 +2,9 @@
 <html lang="es">
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>MediUA</title>
-    <link rel="stylesheet" href="CSS/migas.css"> <!--Para las migas de pan, con rel indico la relación a la página actual-->
+    <link rel="stylesheet" href="CSS/principal.css"> <!--Para las migas de pan, con rel indico la relación a la página actual-->
 </head>
 <body>
     <header>
