--- a/Usuario/perfil.html
+++ b/Usuario/perfil.html
@@ -28,13 +28,13 @@
             <input type="text" id="nombre" name="nombre" autofocus required placeholder="Escriba su nombre aquí"><br>
             <label for="apellidos">Apellidos (obligatorio):</label>
             <input type="text" id="apellidos" name="apellidos" required placeholder="Escriba sus apellidos aquí"><br>
-            <label for="email">Correo electrónico (obligatorio) (Ejemplo: pss78@gmail.com):</label>
+            <label for="email">&#128231; Correo electrónico (obligatorio) (Ejemplo: pss78@gmail.com):</label>
             <input type="email" id="email" name="email" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$" placeholder="pss78@gmail.com" required><br>
-            <label for="usuario">Nombre de usuario (obligatorio):</label>
+            <label for="usuario">&#128100; Nombre de usuario (obligatorio):</label>
             <input type="text" id="usuario" name="usuario" required placeholder="Escriba su nombre de usuario aquí"><br>
-            <label for="contrasena">Contraseña (obligatorio):</label>
+            <label for="contrasena">&#128274; Contraseña (obligatorio):</label>
             <input type="password" id="contrasena" name="contrasena" required placeholder="Escriba su contraseña aquí"><br>
-            <label for="fecha_nacimiento">Fecha de nacimiento:</label>
+            <label for="fecha_nacimiento">&#128197; Fecha de nacimiento:</label>
             <input type="date" id="fecha_nacimiento" name="fecha_nacimiento"><br>
             <fieldset>
                 <legend>Sexo:</legend>
