--- a/index.html
+++ b/index.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>MediUA</title>
     <link rel="stylesheet" href="CSS/principal.css"> <!--Para las migas de pan, con rel indico la relación a la página actual-->
+    <script src="https://kit.fontawesome.com/39dc941603.js" crossorigin="anonymous"></script>
 </head>
 <body>
+    <a href="#contenido" class="sr-only">Saltar al contenido principal</a>
     <header>
         <h1><a href="index.html">MediUA</a></h1> <!--Para usarse como reinicio y para mantener la consitencia-->
     </header>
@@ -18,7 +20,7 @@
             </ol>
         </nav>
     </div>
-    <main>
+    <main id="contenido">
         <h2>Bienvenido a a la página principal de MediUA</h2>
         <p>MediUA es una enciclopedia médica digital diseñada para ofrecer información clara, confiable y accesible sobre una amplia variedad de temas relacionados con la salud. Su objetivo principal es acercar el conocimiento médico tanto a profesionales como a estudiantes y público general, combinando rigor científico con un lenguaje comprensible.</p>
         <h3><a href="Buscador/buscador.html">Buscador de términos médicos</a></h3>
@@ -100,7 +102,7 @@
     <footer>
         <p>&copy; 2025 MediUA. Todos los derechos reservados.</p>
         <address>
-            Escrito por: Pablo Sánchez Sos y Eva Soto Peral<br>
+            <i class="fa-solid fa-pencil"></i>Escrito por: Pablo Sánchez Sos y Eva Soto Peral<br>
             Correo: pss78@alu.ua.es y esp96@alu.ua.es<br>
             Dirección: Carr. de San Vicente del Raspeig
         </address>
