--- a/Contacto/contacto.html
+++ b/Contacto/contacto.html
@@ -43,7 +43,7 @@
             </select>
             </p>
             <p>
-            <label for="fecha">Fecha (cuándo se ha rellenado el formulario):</label>
+            <label for="fecha">&#128197; Fecha (cuándo se ha rellenado el formulario):</label>
             <input type="date" id="fecha" name="fecha">
             </p>
             <fieldset>
@@ -62,7 +62,7 @@
             </p>
             </fieldset>
             <p>
-            <label for="email">Correo electrónico (Ejemplo: pss78@gmail.com):</label>
+            <label for="email">&#128231; Correo electrónico (Ejemplo: pss78@gmail.com):</label>
             <input type="email" id="email" name="email" pattern="[a-z0-9._%+\-]+@[a-z0-9.\-]+\.[a-z]{2,}$" placeholder="pss78@gmail.com">
             </p>
             <p>
