--- a/index.html
+++ b/index.html
@@ -102,9 +102,9 @@
     <footer>
         <p>&copy; 2025 MediUA. Todos los derechos reservados.</p>
         <address>
-            <i class="fa-solid fa-pencil"></i>Escrito por: Pablo Sánchez Sos y Eva Soto Peral<br>
-            Correo: pss78@alu.ua.es y esp96@alu.ua.es<br>
-            Dirección: Carr. de San Vicente del Raspeig
+            <i class="fa-solid fa-pencil" aria-label="Lápiz" role="img"></i> Escrito por: Pablo Sánchez Sos y Eva Soto Peral<br>
+            <i class="fa-solid fa-envelope" aria-label="Correo" role="img"></i> Correo: pss78@alu.ua.es y esp96@alu.ua.es<br>
+            <i class="fa-solid fa-house" aria-label="Casa" role="img"></i> Dirección: Carr. de San Vicente del Raspeig
         </address>
         <nav aria-label="Navegación de regreso a página principal y mapa del sitio web">
             <ul>
