--- a/Buscador/buscador.html
+++ b/Buscador/buscador.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Buscador de términos médicos - MediUA</title>
     <link rel="stylesheet" href="../CSS/principal.css">
+    <script src="https://kit.fontawesome.com/39dc941603.js" crossorigin="anonymous"></script>
 </head>
 <body>
     <header>
@@ -109,9 +110,9 @@
     <footer>
         <p>&copy; 2025 MediUA. Todos los derechos reservados.</p>
         <address>
-            Escrito por: Pablo Sánchez Sos y Eva Soto Peral<br>
-            Correo: pss78@alu.ua.es y esp96@alu.ua.es<br>
-            Dirección: Carr. de San Vicente del Raspeig
+            <i class="fa-solid fa-pencil" aria-label="Lápiz" role="img"></i> Escrito por: Pablo Sánchez Sos y Eva Soto Peral<br>
+            <i class="fa-solid fa-envelope" aria-label="Correo" role="img"></i> Correo: pss78@alu.ua.es y esp96@alu.ua.es<br>
+            <i class="fa-solid fa-house" aria-label="Casa" role="img"></i> Dirección: Carr. de San Vicente del Raspeig
         </address>
         <nav aria-label="Navegación de regreso a página principal y mapa del sitio web">
             <ul>
