--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <img src="Imagenes/creadores.jpg" usemap="#image-map" alt="Creadores de MediUA y a qué instituciones pertenecen">
         <figcaption>Creadores junto al edificio de la politécnica cuatro y los logos de las instituciones a las que pertenecen.</figcaption>
         </figure>
-        <map name="image-map">
+        <map name="image-map" class="center">
             <area  alt="Edificio de la Universidad de Alicante, Politécnica Cuatro" title="Edificio de la UA, Politécnica IV" href="https://eps.ua.es/es/infraestructuras-espacios/infraestructuras-y-espacios/politecnica-iv-edificio-docente-y-departamental.html" coords="1,0,469,213" shape="rect">
             <area  alt="Grado en Ingeniería Biomédica" title="Grado en Ingeniería Biomédica" href="https://web.ua.es/es/grados/grado-en-ingenieria-biomedica/" coords="179,508,296,604" shape="rect">
             <area  alt="Universidad de Alicante" title="Universidad de Alicante" href="https://www.ua.es/" coords="82,556,49" shape="circle">
