--- a/A/PatologiasA/abdomen_hinchado.html
+++ b/A/PatologiasA/abdomen_hinchado.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <title>Abdomen hinchado - MediUA</title>
+    <script src="https://kit.fontawesome.com/39dc941603.js" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="../../CSS/principal.css">
   </head>
   <body>
@@ -111,9 +112,9 @@
     <footer>
       <p>&copy; 2025 MediUA. Todos los derechos reservados.</p>
       <address>
-        Escrito por: Pablo Sánchez Sos y Eva Soto Peral<br>
-        Correos: pss78@alu.ua.es y esp96@alu.ua.es<br>
-        Dirección: Carr. de San Vicente del Raspeig
+        <i class="fa-solid fa-pencil" aria-label="Lápiz" role="img"></i> Escrito por: Pablo Sánchez Sos y Eva Soto Peral<br>
+        <i class="fa-solid fa-envelope" aria-label="Correo" role="img"></i> Correo: pss78@alu.ua.es y esp96@alu.ua.es<br>
+        <i class="fa-solid fa-house" aria-label="Casa" role="img"></i> Dirección: Carr. de San Vicente del Raspeig
       </address>
       <nav aria-label="Navegación de regreso a página principal y mapa del sitio web">
             <ul>
