--- a/Buscador/buscador.html
+++ b/Buscador/buscador.html
@@ -32,7 +32,7 @@
             <label for="descripcion">Descripción (obligatorio):</label>
             <input type="text" id="descripcion" name="descripcion" autofocus required placeholder="Describa aquí el término">
             <label for="logico_descripcion">Conector lógico para descripción:</label>
-            <select id="logico_descripcion" name="logico_descripcion">
+            <select id="logico_descripcion" name="logico_descripcion" class="log">
                 <option value="and">Y</option>
                 <option value="or">O</option>
             </select>
@@ -41,7 +41,7 @@
             <label for="causas">Causas:</label>
             <input type="text" id="causas" name="causas" placeholder="Escriba aquí las causas">
             <label for="logico_causas">Conector lógico para causas:</label>
-            <select id="logico_causas" name="logico_causas">
+            <select id="logico_causas" name="logico_causas" class="log">
                 <option value="and">Y</option>
                 <option value="or">O</option>
             </select>
@@ -58,7 +58,7 @@
                 <option value="otros">Otros</option>
             </select>
             <label for="logico_sintomas">Conector lógico para síntomas:</label>
-            <select id="logico_sintomas" name="logico_sintomas">
+            <select id="logico_sintomas" name="logico_sintomas" >
                 <option value="and">Y</option>
                 <option value="or">O</option>
             </select>
