--- a/index.html
+++ b/index.html
@@ -12,14 +12,12 @@
     <header>
         <h1><a href="index.html">MediUA</a></h1> <!--Para usarse como reinicio y para mantener la consitencia-->
     </header>
-    <div class="breadcrumb-container"> <!--Las etiquetas class son necesarias para relacionar el html con el css y poder dar estilo-->
-        <span class="breadcrumb-label">Estás en:</span> <!--Etiqueta para lectores de pantalla y para que esté todo en una misma línea-->
-        <nav aria-label="migas de pan">
-            <ol class="breadcrumbs">
-                <li class="breadcrumb-item">Enciclopedia médica</li>
-            </ol>
-        </nav>
-    </div>
+    <nav class="breadcrumb-container" aria-label="migas de pan">
+        <span class="breadcrumb-label">Estás en:</span>
+        <ul class="breadcrumbs">
+            <li class="breadcrumb-item">Enciclopedia médica</li>
+        </ul>
+    </nav>
     <main id="contenido">
         <h2>Bienvenido a a la página principal de MediUA</h2>
         <p>MediUA es una enciclopedia médica digital diseñada para ofrecer información clara, confiable y accesible sobre una amplia variedad de temas relacionados con la salud. Su objetivo principal es acercar el conocimiento médico tanto a profesionales como a estudiantes y público general, combinando rigor científico con un lenguaje comprensible.</p>
@@ -56,7 +54,7 @@
             </ul>
         </nav>
         </main>
-    <section>
+    <section class="temas-destacados">
         <h3>Temas destacados</h3>
         <h4>Cáncer de piel</h4>
         <figure>
